<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detailsid">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/project_background">

    <ImageView
        android:id="@+id/imageViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/capitamarvel"
        />

        <TextView
            android:id="@+id/textViewDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            tools:text="Wonder Woman"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="8"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDetailsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Date"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="8"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailsTitle" />


        <com.like.LikeButton
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            app:icon_size="10dp"
            app:icon_type="heart"
            app:layout_constraintStart_toEndOf="@+id/ratingBarDetails"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDetails"

            />

        <RatingBar
        android:id="@+id/ratingBarDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progressBackgroundTint="@color/Rating_yellow"
        android:progressTint="@color/Rating_yellow"
        style="?android:attr/ratingBarStyleIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetails" />

        <TextView
            android:id="@+id/textViewMovieDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="movieDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBarDetails" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/item_elenco" />

        <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Cast"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMovieDescription" />

        <TextView
            android:id="@+id/textViewRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="8dp"
            tools:text="rate"
            android:textSize="16sp"
            android:textColor="@color/Rating_yellow"
            app:layout_constraintEnd_toStartOf="@+id/ratingBarDetails"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDetails" />

        <TextView
            android:id="@+id/textViewRelatedMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="Related Movies"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/textViewRelatedMovies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewActors" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcRelatedMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recycler_list_img"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewActors"
            android:layout_marginTop="@dimen/default_size_64_dp"
            android:layout_marginStart="@dimen/default_size_8_dp"
            android:layout_marginEnd="@dimen/default_size_8_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/default_size_8_dp"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


