...
            <ImageView
                android:id="@+id/imageLatestMovie"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="@dimen/default_size_64_dp"
                app:layout_constraintBottom_toTopOf="@+id/rvPopularMovies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:background="@drawable/capitamarvel"
                />

            <androidx.recyclerview.widget.RecyclerView
...
